--- a/requirements.txt
+++ b/requirements.txt
@@ -155,7 +155,7 @@ python-dotenv==1.0.1
 python-json-logger==3.3.0
 python-utils==3.9.1
 pytz==2025.1
-pywin32==310
+pywin32
 pywinpty==2.0.15
 PyYAML==6.0.2
 pyzmq==26.4.0
