--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ filelock==3.18.0
 Flask==3.1.1
 fsspec==2025.5.1
 imageio==2.37.0
+imutils==0.5.4
 itsdangerous==2.2.0
 Jinja2==3.1.6
 lazy_loader==0.4
