--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ easyocr==1.7.2
 filelock==3.18.0
 Flask==3.1.1
 fsspec==2025.5.1
+gunicorn==23.0.0
 imageio==2.37.0
 imutils==0.5.4
 itsdangerous==2.2.0
@@ -12,6 +13,7 @@ Jinja2==3.1.6
 lazy_loader==0.4
 MarkupSafe==3.0.2
 mpmath==1.3.0
+mysql-connector==2.2.9
 networkx==3.5
 ninja==1.11.1.4
 numpy==2.2.6
