--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ click-didyoumean
 colorama==0.4.6
 easyocr==1.7.2
 filelock==3.18.0
-Flask==3.1.1
+Flask
 fsspec==2025.5.1
 gunicorn==23.0.0
 imageio==2.37.0
