--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,9 @@
 blinker==1.9.0
-click
-click-didyoumean
+click==8.2.1
 colorama==0.4.6
 easyocr==1.7.2
 filelock==3.18.0
-Flask
+Flask==3.1.1
 fsspec==2025.5.1
 gunicorn==23.0.0
 imageio==2.37.0
@@ -20,7 +19,6 @@ ninja==1.11.1.4
 numpy==2.2.6
 opencv-python==4.11.0.86
 opencv-python-headless==4.11.0.86
-p==1.5.0
 packaging==25.0
 pillow==11.2.1
 pyclipper==1.3.0.post6
@@ -28,7 +26,6 @@ python-bidi==0.6.6
 PyYAML==6.0.2
 scikit-image==0.25.2
 scipy==1.15.3
-setuptools==80.9.0
 shapely==2.1.1
 sympy==1.14.0
 tifffile==2025.6.1
