--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ lazy_loader==0.4
 MarkupSafe==3.0.2
 mpmath==1.3.0
 mysql-connector==2.2.9
+mysql-connector-python==9.3.0
 networkx==3.5
 ninja==1.11.1.4
 numpy==2.2.6
